k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk049-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk049-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk049-ingress-test
            port:
              number: 8080
        path: /prometheus
        pathType: Prefix
      - backend:
          service:
            name: sk049-ingress-test
            port:
              number: 8081
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: sk049-ingress-test
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: sk049-ingress-test
            port:
              number: 8080
        path: /
        pathType: Prefix
